--- a/CapturingUI/config.json
+++ b/CapturingUI/config.json
@@ -1,5 +1,5 @@
 {
     "home_ip": "192.168.1",
-    "interface_name": "Realtek PCIe GBE Family Controller",
+    "interface_name": "Intel(R) Dual Band Wireless-AC 3165",
     "only_summaries": "True" 
 }
